--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,10 @@ a:hover{
 .navbar-encanto{
     background: var(--bg2);
 }
+.navbar .navbar-nav .nav-link.active::after{
+    display: none;
+}
+
 
 /* LOGO */
 .logo-navbar{
@@ -120,4 +124,56 @@ a:hover{
 
 .navbar-toggler.x .navbar-toggler-icon::after{
     transform:rotate(-45deg);
+}
+
+/* HOME */
+section{
+    padding-top: 160px;
+    padding-bottom: 160px;
+}
+#h1{
+    font-weight: 900;
+    font-weight: bolder;
+}
+#home{
+    background: linear-gradient(to right, #333333, rgba(50, 50, 50, 0.3)), url(../img/banner.jpg);
+    min-height: 100vh;
+    display: flex;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+#home p{
+    margin-top: 24px;
+    margin-bottom: 24px;
+}
+/* BTN */
+
+.btn{
+    padding: 16px 35px;
+    transition: all 0.4s ease;
+    font-weight: 800;
+    border-radius: 0px;
+}
+
+.btn-brand{
+    background-color: var(--color1);
+    color: var(--white);
+}
+.btn-brand:hover{
+    background-color: transparent;
+    color: var(--white);
+    border-color: var(--color1) ;
+}
+
+
+
+.btn-outline-brand{
+    background-color: transparent;
+    color: var(--white);
+    border-color: var(--color1) ;
+}
+.btn-outline-brand:hover{
+    background-color: var(--color1);
+    color: var(--white);
 }
